--- a/index.html
+++ b/index.html
@@ -97,16 +97,153 @@
 </div>
 </section>
 
-<!-- section 3 -->
- <section>
-
-
-
-
-
+<!-- section 4-->
+ <section class="sect4text">
+<h1>Many ways to build your savings</h1>
+<p>Earn 12%-22% when you save 
+    with any of these PiggyVest plans.</p>
  </section>
 
+ <!-- section 4 part 2 -->
+<section class="herogrid">
+
+<main class="automated">
+
+    <div>
+<h2>Automated Savings</h2>
+<p>Build a dedicated savings faster 
+    on your terms, automatically or manually.</p>
 </div>
-    
+
+
+
+<div class="automated1">
+
+    <div class="arrow">
+    <img src="assets/right-arrow (1).png" alt="">
+    <h5>piggy bank</h5>
+     </div>
+
+<div class="abso">
+    <img src="assets/automated.png" alt="">
+</div>
+
+</div>
+
+</main>
+
+<!-- ############ -->
+
+<main class="fixed">
+    <div>
+<h2>Fixed Savings</h2>
+<p>Lock money away for a fixed duration without having access to it until maturity.
+     It's like having a custom fixed deposit.</p>
+    </div>
+
+
+<div class="fixed1">
+    <div class="arrow">
+    <img src="assets/right-arrow (1).png" alt="">
+    <h5> Safelock</h5>
+</div>
+
+    <div class="abso">
+        <img src="assets/fixed.png" alt="">
+    </div>
+</div>
+
+</main>
+
+<!-- ############ -->
+
+
+<main class="goal">
+<h2>Goal-oriented Savings</h2>
+<p>Reach all your savings goals faster.
+     Save towards multiple goals on your own or with a group.</p>
+
+<div class="goal1">
+    <div class="arrow">
+    <img src="assets/right-arrow (1).png" alt="">
+    <h5>Target Savings</h5>
+</div>
+
+    <div class="abso">
+        <img src="assets/image 3.png" alt="">
+    </div>
+</div>
+
+</main>
+
+<!-- ############ -->
+
+<main class="flexnaira">
+<h2>Flex Naira</h2>
+<p>Save, transfer, manage, organise, 
+    and withdraw your money at any time.</p>
+
+<div class="flexnaira1">
+    <div class="arrow">
+    <img src="assets/right-arrow (1).png" alt="">
+    <h5>Flex Naira</h5>
+</div>
+
+    <div class="abso">
+        <img src="assets/image 4.png" alt="">
+    </div>
+</div>
+
+</main>
+
+<!-- ############ -->
+
+<main class="flexdollar">
+<h2>Flex Dollar</h2>
+<p>Save and grow
+     your money in foreign currencies such as Dollars.</p>
+
+<div class="flexdollar1" >
+    <div class="arrow">
+    <img src="assets/right-arrow (1).png" alt="">
+    <h5>flex dollar</h5>
+     </div>
+
+    <div class="abso">
+        <img src="assets/image 5.png" alt="">
+    </div>
+</div>
+
+</main>
+
+<!-- ############ -->
+
+<main class="houseMoney">
+<h2>HouseMoney</h2>
+<p>Plan for your rent and household expenses</p>
+
+<div  class="houseMoney1">
+
+    <div class="arrow">
+    <img src="assets/right-arrow (1).png" alt="">
+    <h5>House Money</h5>
+</div>
+
+    <div class="abso">
+        <img src="assets/image 6.png" alt="">
+    </div>
+
+</div>
+
+</main>
+
+
+</section>
+
+
+
+
+
+</div>
 </body>
 </html>
