--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 </main>
 
-<!-- ############ -->
+
 
 <main class="fixed">
     <div>
@@ -155,7 +155,6 @@
 
 </main>
 
-<!-- ############ -->
 
 
 <main class="goal">
@@ -176,7 +175,6 @@
 
 </main>
 
-<!-- ############ -->
 
 <main class="flexnaira">
 <h2>Flex Naira</h2>
@@ -196,7 +194,6 @@
 
 </main>
 
-<!-- ############ -->
 
 <main class="flexdollar">
 <h2>Flex Dollar</h2>
@@ -216,7 +213,6 @@
 
 </main>
 
-<!-- ############ -->
 
 <main class="houseMoney">
 <h2>HouseMoney</h2>
@@ -236,9 +232,158 @@
 </div>
 
 </main>
-
-
 </section>
+
+
+
+<main class="sect5text">
+    <h1>Diverse ways to Invest</h1>
+    <p>Grow your money and invest for your future confidently.</p>
+</main>
+
+<!-- section 5 -->
+<main class="sect5">
+<div class="sect5left">
+
+    <div>
+<h1>Earn Up to 35% returns</h1>
+<p>Invest securely and confidently on the go. Grow your money confidently by investing in pre-vetted investment opportunities.</p>
+</div>
+
+<div class="arrow">
+    <img src="assets/right-arrow (1).png" alt="">
+    <h5> Learn about Investments</h5>
+</div>
+
+</div>
+
+
+<div class="sect5img">
+    <img src="assets/piggy image.png" alt="">
+</div>
+</main>
+
+
+<!-- section 6 -->
+ <section class="sect6">
+<main >
+<h1>Meet Our Saver of the Month</h1>
+<p>Every month, we shine a spotlight on one saver, 
+    asking them about their savings culture and how 
+    Piggyvest has helped them.</p>
+</main>
+
+    <video src="assets/video.mp4" loop autoplay muted></video>
+</section>
+
+
+<!-- section 7 -->
+ <section class="sect7">
+
+<main class="sect7img">
+    <img src="assets/fallback_Img_2ccaefc7f6.png" alt="">
+</main>
+
+
+<main class="sect7right">
+    <h1>Join 5+ million people who save and invest with us</h1>
+
+    <div class="sect7btn">
+        <div class="btn3">
+            <img src="assets/apple (1).png" alt="">
+            <a href="">Get on iPhone</a>
+        </div>
+        
+        <div class="btn3">
+            <img src="assets/google-play.png" alt="">
+            <a href="">Get on Android</a>
+        </div>
+            </div>
+
+</main>
+
+ </section>
+
+ <!-- sponsors -->
+
+ <section class="sponsors">
+    <h1>As featured in</h1>
+
+    <main class="sponsorsimg">
+<img src="assets/tech cabal.png" alt="">
+<img src="assets/cnbc.png" alt="">
+<img src="assets/tech crunch.png" alt="">
+<img src="assets/pymnt.svg" alt="">
+<img src="assets/fast company.svg" alt="">
+<img src="assets/cio.svg" alt="">
+    </main>
+ </section>
+
+
+ <!-- footer -->
+  <footer>
+    <main>
+       <img src="assets/piggy logo.svg" alt=""> 
+       <img src="assets/compliance.avif" alt="">
+    </main>
+
+    <main>
+        <ul>
+        <li><p>Products</p></li>
+        <li><a href="">Piggybank</a></li>
+      <li> <a href="">Invest</a></li>
+      <li> <a href="">Safelock</a></li>
+      <li> <a href="">Target Savings</a></li>
+      <li> <a href="">Flex Naira</a></li>
+      <li> <a href="">Flex Dollar</a></li>
+    </ul>
+    </main>
+
+    <main>
+   <p>Company</p>
+      <ul>
+        <li> <a href="">About</a></li>
+        <li> <a href=""> FAQs </a></li>
+        <li> <a href=""> Blog </a></li>
+      </ul>
+    </main>
+
+    <main>
+        <p>Legal</p>
+      <ul>
+        <li><a href="">Terms</a></li>
+        <li> <a href="">Privacy</a></li>
+        <li> <a href="">Security</a></li>
+      </ul>
+    </main>
+
+    <main >
+<div>
+  <img src="" alt="">  
+  <img src="" alt="">  
+  <img src="" alt="">  
+  <img src="" alt="">  
+  <img src="" alt="">  
+</div>
+
+<main>
+    <p>Tesmot house, Abdulrahman Okene close, Victoria Island, Lagos, Nigeria.</p>
+    <p>contact@piggyvest.com</p>
+    <p>+234 700 933 9339</p>
+</main>
+
+    </main>
+
+
+
+
+
+  </footer>
+
+
+
+
+
 
 
 
