--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <p>PiggyVest uses the highest level of Internet Security and it is secured by 256 bits SSL security encryption to ensure that your information is comepletely protected from fraud.</p>
 
 <div class="herotext3">
-    <img src="" alt="">
+    <img src="assets/right-arrow (1).png" alt="">
     <p>More on our security measures</p>
 </div>
 
@@ -321,15 +321,17 @@
 
 
  <!-- footer -->
-  <footer>
-    <main>
+  <footer class="footer">
+
+    <main class="footimg">
        <img src="assets/piggy logo.svg" alt=""> 
        <img src="assets/compliance.avif" alt="">
     </main>
 
-    <main>
+    <main class="footertext1">
+        <main>
+        <p>Products</p>
         <ul>
-        <li><p>Products</p></li>
         <li><a href="">Piggybank</a></li>
       <li> <a href="">Invest</a></li>
       <li> <a href="">Safelock</a></li>
@@ -337,18 +339,19 @@
       <li> <a href="">Flex Naira</a></li>
       <li> <a href="">Flex Dollar</a></li>
     </ul>
-    </main>
+</main>
 
     <main>
-   <p>Company</p>
-      <ul>
-        <li> <a href="">About</a></li>
-        <li> <a href=""> FAQs </a></li>
-        <li> <a href=""> Blog </a></li>
-      </ul>
+        <p>Company</p>
+           <ul>
+             <li> <a href="">About</a></li>
+             <li> <a href=""> FAQs </a></li>
+             <li> <a href=""> Blog </a></li>
+           </ul>
+         </main>
     </main>
 
-    <main>
+    <main class="footertext">
         <p>Legal</p>
       <ul>
         <li><a href="">Terms</a></li>
@@ -357,13 +360,13 @@
       </ul>
     </main>
 
-    <main >
+    <main  class="address">
 <div>
-  <img src="" alt="">  
-  <img src="" alt="">  
-  <img src="" alt="">  
-  <img src="" alt="">  
-  <img src="" alt="">  
+  <img src="assets/facebook.png" alt="">  
+  <img src="assets/social (1).png" alt="">  
+  <img src="assets/twitter.png" alt="">  
+  <img src="assets/tik-tok.png" alt="">  
+  <img src="assets/youtube.png" alt="">  
 </div>
 
 <main>
@@ -373,9 +376,17 @@
 </main>
 
     </main>
+  </footer>
+
+  <!-- footer 2 -->
 
 
+  <footer class="foot">
+<p>Piggyvest (formerly piggybank.ng) is the leading online savings & investing platform in Nigeria. For over 9 years, our customers have saved and invested billions of Naira that they would normally be tempted to spend.</p>
 
+<p>PV Capital Limited is a fund manager duly licensed by the Securities and Exchange Commission (SEC) of Nigeria.</p>
+
+<p>2016 - 2025 PiggyTech Global Limited - RC 1405222</p>
 
 
   </footer>
