--- a/index.html
+++ b/index.html
@@ -90,8 +90,12 @@
 <p>PiggyVest uses the highest level of Internet Security and it is secured by 256 bits SSL security encryption to ensure that your information is comepletely protected from fraud.</p>
 
 <div class="herotext3">
+    <div>
     <img src="assets/right-arrow (1).png" alt="">
+</div>
+<div>
     <p>More on our security measures</p>
+</div>
 </div>
 
 </div>
